# vlc

./: CMakeLists.txt  README.md  config.h.in
compat/: CMakeLists.txt  setenv.c  swab.c
compat/win32/: dirent.h
lib/: CMakeLists.txt  event.c  media.c  media_player.c
modules/: CMakeLists.txt
modules/access/: CMakeLists.txt  live555.cpp
modules/access/fs/: CMakeLists.txt
modules/access/http/: CMakeLists.txt
modules/access/live555/: CMakeLists.txt
modules/access/rtsp/: CMakeLists.txt
modules/access/screen/: screenshooter-client-protocol.h  screenshooter-protocol.c
modules/access_output/: CMakeLists.txt
modules/access_output/dummy/: CMakeLists.txt
modules/access_output/file/: CMakeLists.txt
modules/access_output/http/: CMakeLists.txt
modules/access_output/livehttp/: CMakeLists.txt
modules/access_output/shout/: CMakeLists.txt
modules/access_output/srt/: CMakeLists.txt
modules/access_output/udp/: CMakeLists.txt
modules/audio_filter/: CMakeLists.txt
modules/audio_filter/channel_mixer/: CMakeLists.txt
modules/audio_filter/compressor/: CMakeLists.txt
modules/audio_filter/converter/: CMakeLists.txt
modules/audio_filter/equalizer/: CMakeLists.txt
modules/audio_filter/param_eq/: CMakeLists.txt
modules/audio_filter/resampler/: CMakeLists.txt
modules/audio_filter/scaletempo/: CMakeLists.txt
modules/audio_mixer/: CMakeLists.txt
modules/audio_mixer/float/: CMakeLists.txt
modules/audio_mixer/integer/: CMakeLists.txt
modules/audio_output/: CMakeLists.txt  vlcpulse.c
modules/audio_output/adummy/: CMakeLists.txt
modules/audio_output/alsa/: CMakeLists.txt
modules/audio_output/amem/: CMakeLists.txt
modules/audio_output/oss/: CMakeLists.txt
modules/audio_output/pulse/: CMakeLists.txt
modules/codec/: CMakeLists.txt  videotoolbox.m
modules/codec/avcodec/: CMakeLists.txt  video.c
modules/codec/ddummy/: CMakeLists.txt
modules/codec/edummy/: CMakeLists.txt
modules/codec/faad/: CMakeLists.txt
modules/codec/omxil/: CMakeLists.txt  mediacodec.c  mediacodec_jni.c
modules/codec/videotoolbox/: CMakeLists.txt
modules/control/: CMakeLists.txt  oldrc.c
modules/control/dummy/: CMakeLists.txt
modules/control/vlc_libmotion/: CMakeLists.txt
modules/demux/: CMakeLists.txt
modules/demux/adaptive/: CMakeLists.txt  PlaylistManager.cpp  StreamFormat.cpp  StreamFormat.hpp  Streams.cpp
modules/demux/dash/: DASHStream.cpp
modules/demux/mp4/: CMakeLists.txt  libmp4.c  mp4.c
modules/gui/: CMakeLists.txt
modules/gui/macosx/: VLCMainMenu.m
modules/gui/ncurses/: CMakeLists.txt
modules/gui/qt/: CMakeLists.txt
modules/hw/: CMakeLists.txt
modules/hw/mmal/: Makefile  Makefile.in
modules/hw/vaapi/: CMakeLists.txt
modules/hw/vdpau/: CMakeLists.txt
modules/keystore/: CMakeLists.txt
modules/logger/: CMakeLists.txt
modules/logger/android/: CMakeLists.txt
modules/logger/console/: CMakeLists.txt
modules/logger/file/: CMakeLists.txt
modules/logger/journal/: CMakeLists.txt
modules/logger/syslog/: CMakeLists.txt
modules/lua/: CMakeLists.txt
modules/meta_engine/: CMakeLists.txt
modules/misc/: CMakeLists.txt
modules/misc/gnutls/: CMakeLists.txt
modules/misc/securetransport/: CMakeLists.txt
modules/misc/xml/: CMakeLists.txt
modules/mux/: CMakeLists.txt
modules/mux/mp4/: CMakeLists.txt
modules/notify/: CMakeLists.txt
modules/packetizer/: CMakeLists.txt
modules/packetizer/h264/: CMakeLists.txt
modules/packetizer/hevc/: CMakeLists.txt
modules/packetizer/mpeg4audio/: CMakeLists.txt
modules/packetizer/mpeg4video/: CMakeLists.txt
modules/packetizer/vlc_libh264/: CMakeLists.txt
modules/services_discovery/: CMakeLists.txt
modules/spu/: CMakeLists.txt
modules/stream_extractor/: CMakeLists.txt
modules/stream_filter/: CMakeLists.txt
modules/stream_filter/accesstweaks/: CMakeLists.txt
modules/stream_filter/adf/: CMakeLists.txt
modules/stream_filter/aribcam/: CMakeLists.txt
modules/stream_filter/cache_block/: CMakeLists.txt
modules/stream_filter/cache_read/: CMakeLists.txt
modules/stream_filter/decomp/: CMakeLists.txt
modules/stream_filter/hds/: CMakeLists.txt
modules/stream_filter/inflate/: CMakeLists.txt
modules/stream_filter/prefetch/: CMakeLists.txt
modules/stream_filter/record/: CMakeLists.txt
modules/stream_filter/skiptags/: CMakeLists.txt
modules/stream_out/: CMakeLists.txt
modules/text_renderer/: CMakeLists.txt
modules/video_chroma/: CMakeLists.txt
modules/video_chroma/chain/: CMakeLists.txt
modules/video_chroma/cvpx/: CMakeLists.txt
modules/video_chroma/grey_yuv/: CMakeLists.txt
modules/video_chroma/i420_10_p010/: CMakeLists.txt
modules/video_chroma/i420_nv12/: CMakeLists.txt
modules/video_chroma/i420_rgb/: CMakeLists.txt
modules/video_chroma/i420_yuy2/: CMakeLists.txt
modules/video_chroma/i422_i420/: CMakeLists.txt
modules/video_chroma/i422_yuy2/: CMakeLists.txt
modules/video_chroma/omxdl/: CMakeLists.txt
modules/video_chroma/rv32/: CMakeLists.txt
modules/video_chroma/swscale/: CMakeLists.txt
modules/video_chroma/yuvp/: CMakeLists.txt
modules/video_chroma/yuy2_i420/: CMakeLists.txt
modules/video_chroma/yuy2_i422/: CMakeLists.txt
modules/video_filter/: CMakeLists.txt  ci_filters.m
modules/video_filter/adjust/: CMakeLists.txt
modules/video_filter/alphamask/: CMakeLists.txt
modules/video_output/: CMakeLists.txt
modules/video_splitter/: CMakeLists.txt
modules/visualization/: CMakeLists.txt
po/: CMakeLists.txt  ach.gmo  af.gmo  am.gmo  an.gmo  ar.gmo  as_IN.gmo  ast.gmo  be.gmo  bg.gmo  bn.gmo  bn_IN.gmo  br.gmo  brx.gmo  bs.gmo  ca.gmo  ckb.gmo  co.gmo  cs.gmo  cy.gmo  da.gmo  de.gmo  el.gmo  en_GB.gmo  es.gmo  et.gmo  eu.gmo  fa.gmo  ff.gmo  fi.gmo  fr.gmo  fur.gmo  fy.gmo  ga.gmo  gd.gmo  gl.gmo  gu.gmo  he.gmo  hi.gmo  hr.gmo  (+50 more)
share/: CMakeLists.txt
src/: CMakeLists.txt  fourcc_tables.h  libvlc.c  revision.c
src/android/: specific.c
src/input/: decoder.c  es_out.c  event.c  event.h  resource.c  resource.h  var.c
src/misc/: block.c
src/misc_output/: misc_out_internal.h  misc_output.c
src/win32/: specific.c
(+138 files in other folders)
